# geektime-rust

httpie/: Cargo.toml  README.md
httpie/src/: main.rs
scrape_url/: Cargo.toml  README.md  rust.md
scrape_url/src/: main.rs
